maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:20: error: Unmatched closing brace '}' ignored here
}
^